# premote

./: README.md  premote-server.cabal
premote-android/: build.sbt
premote-android/src/androidTest/java/me/elrod/premote/: MainActivityTest.java
premote-android/src/main/: AndroidManifest.xml
premote-android/src/main/java/me/elrod/premote/: MainActivity.java
premote-android/src/main/res/layout/: main.xml
premote-android/src/main/scala/me/elrod/premote/: MainActivity.scala  PremoteClient.scala
premote-server/: .gitignore  Main.hs  README.md  premote-server.cabal
