name:                premote-server
version:             0.1.0.0
synopsis:            The server component of premote
-- description:
homepage:            https://github.com/CodeBlock/premote-server/
license:             BSD2
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          ricky@elrod.me
copyright:           (c) 2014 Ricky Elrod
stability:           experimental
category:            Graphics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable premote-server
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >= 4 && < 5,
                       network-info >= 0.2 && < 0.3,
                       X11 >= 1.6 && < 1.7,
                       scotty >= 0.8 && < 1,
                       scotty-tls >= 0.3 && < 1,
                       transformers >= 0.3 && < 0.5,
                       wai >= 3 && < 4,
                       warp >= 3 && < 4,
                       warp-tls >= 3 && < 4
  -- hs-source-dirs:
  default-language:    Haskell2010